--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
         <click-counter></click-counter>
     </div>
 
+    <script type="text/x-template" id="click-counter-template">
+        <div>
+            <button @click="count++">{{count}}</button>
+        </div>
+        
+    </script>
+
     <script src="app.js"></script>
 </body>
 </html>
