--- a/index.html
+++ b/index.html
@@ -1,29 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://unpkg.com/vue"></script>
-    
-    <title>Components</title>
-</head>
-<body>
-    <div id="app">
-        <h1>Vue.js Components</h1>
-        <click-counter></click-counter>
-        <click-counter></click-counter>
-        <click-counter></click-counter>
-        <click-counter></click-counter>
-        <click-counter></click-counter>
-    </div>
-
-    <script type="text/x-template" id="click-counter-template">
+<div id="app" class="container mx-auto py-6">
+    <header>
         <div>
-            <button @click="count++">{{count}}</button>
+            <span id="logo">Liquid Gold Box</span>
         </div>
-        
-    </script>
+    </header>
 
-    <script src="app.js"></script>
-</body>
-</html>
+    <div class="content">
+        <h1 class="title">Coffee Plans</h1>
+
+        <h2 class="subtitle">
+            We travel the world to source the very best single origin coffee for you
+        </h2>
+
+        <div class="plans">
+            <div class="plan">
+                <div class="description">
+                    <span class="title">
+                        The Single
+                    </span>
+                </div>
+            </div>
+            <div class="plan">
+                <div class="description">
+                    <span class="title">
+                        The Curious
+                    </span>
+                </div>
+            </div>
+            <div class="plan">
+                <div class="description">
+                    <span class="title">
+                        The Addict
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
